# myhomeserver

./: .editorconfig  .gitattributes  .gitignore  AUTHORS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  Vagrantfile  gunicorn_conf.py  install.sh  pyproject.toml  requirements.txt  start.py
dev/scripts/: api_docs_gen.py  daemon_routes_gen.py  gen_py_exports.py  project_identity.py
dev/templates/: js_index.jinja  js_requests.jinja  js_routes.jinja
docs/: api.html  architecture.puml  conf.py  develop.adoc  installation.adoc  logo_edit.svgz  manpage.man.adoc  smiley.md
myeasyserver/: __init__.py  __main__.py  app.py  version.py  webserver.py
myeasyserver/alembic/: env.py
myeasyserver/apisrv/: __init__.py  routers.py
myeasyserver/apisrv/auth/: auth.py
myeasyserver/apisrv/core/: __init__.py  deps.py  routers.py
myeasyserver/apisrv/users/: __init__.py  api_keys.py  api_tokens.py  registration.py
myeasyserver/backend/: config.py  main.py  webserver.py
myeasyserver/cli/: main.py
myeasyserver/core/: arg_params.py  config.py  daemon.py  exceptions.py  hasher.py  root_logger.py  security.py  settings.py
myeasyserver/core/providers/: __init__.py  auth_provider.py  credentials_provider.py  fake_provider.py  ldap_provider.py  openid_provider.py
myeasyserver/database/: db_base.py  db_session.py  init_db.py
myeasyserver/database/fixes/: fix_group_with_no_name.py
myeasyserver/database/models/: auto_init.py  jobs.py  model_base.py
myeasyserver/database/models/group/: __init__.py  group.py  invite_tokens.py  preferences.py
myeasyserver/database/models/server/: __init__.py  events.py  exports.py  report.py  task.py  webhooks.py
myeasyserver/database/models/users/: __init__.py  password_reset.py  users.py
myeasyserver/database/repositories/: all_repositories.py  repository_factory.py  repository_generic.py  repository_group.py  repository_users.py
myeasyserver/database/repositories/response/: __init__.py  pagination.py  query_filter.py  query_search.py
myeasyserver/database/seeders/: init_groups.py  init_users.py
myeasyserver/helper/: appdirs.py  camel_snake.py  config_file.py  guid.py  type_conv.py  types.py  validators.py
myeasyserver/helper/i18n/: __init__.py  json_provider.py  provider_factory.py
myeasyserver/lang/: providers.py
myeasyserver/lang/messages/: en-US.json  fr-FR.json
myeasyserver/schema/: basic_model.py
myeasyserver/schema/group/: __init__.py  group.py  group_permissions.py  group_preferences.py  group_statistics.py  invite_token.py
myeasyserver/schema/reports/: __init__.py  reports.py
myeasyserver/schema/server/: __init__.py  events.py  exports.py  tasks.py  webhook.py
myeasyserver/schema/user/: __init__.py  auth.py  registration.py  user.py  user_passwords.py
myeasyserver/services/: base_service.py  group_service.py  remote_execute.py
myeasyserver/services/email/: email_senders.py  email_service.py
myeasyserver/services/email/templates/: default.html
myeasyserver/services/scheduler/: execution_queue.py  timed_tasks.py  worker.py
myeasyserver/services/seeder/: seeder_service.py
myeasyserver/services/user_services/: password_reset_service.py  registration_service.py  user_service.py
