[tool.poetry]
name = "myeasyserver"
version = "0.1.0"
description = "A service which deploys the home web server platform on a Raspberry Pi or a VPS"
authors = ["stephane apiou <stephane@apiou.org>"]
documentation = "https://homeserver.readthedocs.io"
homepage = "https://github.com/steapi/myeasyserver/"
repository = "https://github.com/steapi/myeasyserver/"
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"]
license = "Apache"

[custom.params]
package="myeasyserver"
srcdir="myeasyserver"
man-section="1"
long-description="""A service wich deploys e home web platform on a Raspberry Pi or a VPS
This is usable for debian, Ubuntu systems. other Platforms are planned"""

[tool.poetry.scripts]
myeasyserver = "myeasyserver:main"

[tool.poetry.dependencies]
python = ">=3.9,<=3.13"
alembic = "^1.13.2"
argon2-cffi = "^23.1.0"
authlib = "^1.3.1"
bcrypt = "^4.2.0"
fastapi = "^0.111.1"
fastapi-camelcase="^2.0.0"
fastapi-debug-toolbar="^0.6.2"
html2text = "^2024.2.26"
isodate = "^0.6.1"
passlib = "^1.7.4"
python-daemon = "^3.0.1"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
python-ldap = "^3.4.3"
python-slugify = "^8.0.1"
sqlalchemy = "^2.0.31"
starlette-Admin="^0.13.0"
toml = "^0.10.0"
uvicorn = "^0.30.3"
# A tester: fastapi-cache2 (cache redis ou in memory)
# A tester: fastapi-socketio (avec websocket)
# A tester: fastapi-utils
# A tester: fastapi-filter
# A tester: fastapi-pagination
# A tester: fastapi-health
# A tester: fastapi-quickcrud
# A tester: fastapi-sso
# A tester: fastapi-keycloak
# A tester: fastapi-oauth2
# A tester: fastapi-oauth20

[tool.poetry.dev-dependencies]
flake8 = "^7.1.0"
#invoke = "^1.7.3"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.30"
mkdocs-material-extensions = "^1.3.1"
pylint = "^3.2.6"
yamllint= "*"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=45", "wheel", "setuptools_scm[toml]"]
build-backend = "poetry.core.masonry.api"
